More gitignore, remove tests, api changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 MCU Tier List/MCU Tier List.xcodeproj/project.xcworkspace/xcuserdata
 MCU Tier List/MCU Tier List.xcodeproj/project.xcworkspace/xcuserdata
+MCU Tier List/MCU Tier List.xcodeproj/xcuserdata
